--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^7.3.5",
     "@mui/styled-engine-sc": "^7.3.5",
     "axios": "^1.13.2",
+    "i18next": "^25.6.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.3.3",
     "react-router-dom": "^7.9.5",
     "styled-components": "^6.1.19"
   },
